[CCAP-1301] Setting start date on the main pdf to the correct provider's earliest date (#1882)
Co-authored-by: Ana Medrano <amedrano@codeforamerica.org>
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>